# chess-engine

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Game.cpp  Game.h  Move.cpp  Move.h  MoveGenLookupTbl.cpp  MoveGenLookupTbl.h  board.cpp  board.h  constants.h  evaluate.cpp  evaluate.h  main.cpp  moveGen.cpp  moveGen.h  output.cpp  output.h  perft.cpp  perft.h  pieceShifts.cpp  pieceShifts.h  util.cpp  util.h  utilFunctions.cpp  utilFunctions.h
tests/: CMakeLists.txt  boardTests.cpp  moveGenTests.cpp  moveTests.cpp  perftTests.cpp  utilFunctionsTests.cpp
